# GreyCLI

./: main.py  pyproject.toml  readme.md
greycli/: _script.py
tool/: __init__.py
